--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.3.0",
     "mem0ai>=0.1.88",
-    "vecs>=0.4.5"
+    "vecs>=0.4.5",
+    "python-dotenv>=1.0.0"
 ]
