removed agent_id, app_id and session_id complexity

--- a/env.example
+++ b/env.example
@@ -5,10 +5,8 @@
 # REQUIRED FOR PRODUCTION - Override these defaults
 # =============================================================================
 
-# User and application identifiers
+# User identifier
 DEFAULT_USER_ID=your_production_user_id_here
-DEFAULT_AGENT_ID=your_agent_id_here
-DEFAULT_APP_ID=your_app_id_here
 
 # =============================================================================
 # Server Configuration
@@ -73,3 +71,4 @@ LOG_LEVEL=INFO
 # Example production values:
 # DEFAULT_USER_ID=prod_user_${AUTH_SUBJECT}
 # DEFAULT_USER_ID=tenant_${TENANT_ID}_user_${USER_ID}
+# DEFAULT_USER_ID=${USER_UUID}
