env variable for default

--- a/env.example
+++ b/env.example
@@ -35,6 +35,11 @@ LLM_CHOICE=gpt-3.5-turbo
 # Embedding model choice
 EMBEDDING_MODEL_CHOICE=text-embedding-3-small
 
+# Embedding model dimensions (required for vector storage)
+# Common values: 1536 (OpenAI text-embedding-3-small), 1024 (Ollama nomic-embed-text), 1536 (OpenAI), 1024 (other models)
+# Defaults: OpenAI=1536, Ollama/Other=1024 (can be overridden with this variable)
+EMBEDDING_MODEL_DIMS=1536
+
 # Base URL for Ollama (only needed if using ollama)
 LLM_BASE_URL=http://localhost:11434
 
