--- a/env.example
+++ b/env.example
@@ -26,6 +26,10 @@ TRANSPORT=sse
 # LLM Provider (openai, openrouter, or ollama)
 LLM_PROVIDER=openai
 
+# Embedding Provider (openai, openrouter, or ollama)
+# If not set, will use the same provider as LLM_PROVIDER
+EMBEDDING_PROVIDER=openai
+
 # API Key for your LLM provider
 LLM_API_KEY=your_api_key_here
 
