--- a/env.example
+++ b/env.example
@@ -44,7 +44,11 @@ EMBEDDING_MODEL_CHOICE=text-embedding-3-small
 # Defaults: OpenAI=1536, Ollama/Other=1024 (can be overridden with this variable)
 EMBEDDING_MODEL_DIMS=1536
 
-# Base URL for Ollama (only needed if using ollama)
+# Base URL for your LLM provider
+# OpenAI: https://api.openai.com/v1 (default)
+# Custom OpenAI-compatible server: http://your-server:port/v1
+# Ollama: http://localhost:11434
+# OpenRouter: https://openrouter.ai/api/v1
 LLM_BASE_URL=http://localhost:11434
 
 # =============================================================================
@@ -53,6 +57,34 @@ LLM_BASE_URL=http://localhost:11434
 
 # Supabase connection string
 DATABASE_URL=postgresql://username:password@host:port/database
+
+# Database Connection Management
+# Minimum number of connections in the pool
+DATABASE_POOL_SIZE=5
+
+# Maximum number of connections in the pool
+DATABASE_MAX_CONNECTIONS=20
+
+# Maximum number of connections that can be created beyond the pool size
+DATABASE_MAX_OVERFLOW=10
+
+# Timeout in seconds for getting a connection from the pool
+DATABASE_POOL_TIMEOUT=30
+
+# Time in seconds after which a connection is recycled
+DATABASE_POOL_RECYCLE=3600
+
+# Interval in seconds between database health checks
+DATABASE_HEALTH_CHECK_INTERVAL=60
+
+# Number of retry attempts for database operations
+DATABASE_RETRY_ATTEMPTS=3
+
+# Initial delay in seconds between retry attempts
+DATABASE_RETRY_DELAY=2.0
+
+# Maximum delay in seconds between retry attempts (exponential backoff)
+DATABASE_MAX_RETRY_DELAY=60.0
 
 # =============================================================================
 # Development Settings
