--- a/env.example
+++ b/env.example
@@ -51,6 +51,18 @@ EMBEDDING_MODEL_DIMS=1536
 # OpenRouter: https://openrouter.ai/api/v1
 LLM_BASE_URL=http://localhost:11434
 
+# Base URL for your embedding provider (optional)
+# If not set, will use LLM_BASE_URL for embeddings
+# Useful when you want different endpoints for LLM and embeddings
+# Example: http://embedding-server:port/v1
+EMBEDDING_BASE_URL=
+
+# API Key for your embedding provider (optional)
+# If not set, will use LLM_API_KEY for embeddings
+# Useful when you have different authentication for LLM and embedding servers
+# Example: sk-your-embedding-api-key
+EMBEDDING_API_KEY=
+
 # =============================================================================
 # Database Configuration
 # =============================================================================
