--- a/env.example
+++ b/env.example
@@ -31,6 +31,7 @@ LLM_PROVIDER=openai
 EMBEDDING_PROVIDER=openai
 
 # API Key for your LLM provider
+# Leave empty for servers that don't require authentication
 LLM_API_KEY=your_api_key_here
 
 # LLM Model choice
@@ -60,6 +61,7 @@ EMBEDDING_BASE_URL=
 # API Key for your embedding provider (optional)
 # If not set, will use LLM_API_KEY for embeddings
 # Useful when you have different authentication for LLM and embedding servers
+# Leave empty for servers that don't require authentication
 # Example: sk-your-embedding-api-key
 EMBEDDING_API_KEY=
 
