--- a/env.example
+++ b/env.example
@@ -50,6 +50,7 @@ EMBEDDING_MODEL_DIMS=1536
 # Custom OpenAI-compatible server: http://your-server:port/v1
 # Ollama: http://localhost:11434
 # OpenRouter: https://openrouter.ai/api/v1
+# Azure OpenAI: https://your-resource.openai.azure.com/
 LLM_BASE_URL=http://localhost:11434
 
 # Base URL for your embedding provider (optional)
@@ -127,3 +128,42 @@ LOG_LEVEL=INFO
 # DEFAULT_USER_ID=prod_user_${AUTH_SUBJECT}
 # DEFAULT_USER_ID=tenant_${TENANT_ID}_user_${USER_ID}
 # DEFAULT_USER_ID=${USER_UUID}
+
+# Logging configuration
+# Set to true to enable debug logging (shows detailed configuration and operation info)
+DEBUG=false
+
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# DEBUG: Shows all messages including debug details
+# INFO: Shows informational messages (recommended for production)
+# WARNING: Shows warnings and errors only
+# ERROR: Shows errors only
+LOG_LEVEL=INFO
+
+# LLM Token Configuration
+# Maximum number of tokens the LLM can generate in response
+# Lower values help avoid context length errors with small models
+# Default: 200 (suitable for small context models like 2K-4K tokens)
+LLM_MAX_TOKENS=200
+
+# Expected context length of your LLM model
+# Used for validation and optimization
+# Common values: 2048 (small), 4096 (medium), 8192 (large), 16384+ (very large)
+# Default: 2048
+LLM_CONTEXT_LENGTH=2048
+
+# Azure OpenAI Configuration (only needed if LLM_PROVIDER=azure)
+# Your Azure OpenAI API key
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
+
+# Your Azure OpenAI endpoint URL
+# Format: https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+
+# Azure OpenAI API version
+# Default: 2024-02-15-preview
+AZURE_OPENAI_API_VERSION=2024-02-15-preview
+
+# Your Azure OpenAI deployment name
+# This is the deployment name you created in Azure OpenAI Studio
+AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
