--- a/env.example
+++ b/env.example
@@ -19,6 +19,10 @@ PORT=8050
 # Transport method (sse or stdio)
 TRANSPORT=sse
 
+# MCP server timeout in seconds (default: 300 = 5 minutes)
+# Increase this for processing very long content
+MCP_TIMEOUT=300
+
 # =============================================================================
 # Mem0 Configuration
 # =============================================================================
